5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1590_2894.log
== TEST (2019-03-25 14:14:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.212459
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:14:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(var)
-- EXECUTION TIME:
0.205574
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:14:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.144653
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:15:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.142969
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:15:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.119629
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:16:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(float)
-- EXECUTION TIME:
0.21476
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
<class 'float'>
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
<class 'float'>
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
<class 'float'>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:16:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(float)
-- EXECUTION TIME:
0.143617
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
<class 'float'>
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
<class 'float'>
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
<class 'float'>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:16:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.15062
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:18:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45/8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.141178
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
5.625
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
5.625
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
5.625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:18:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45/8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.11585
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
5.625
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
5.625
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
5.625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:18:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45/8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.214754
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
5.625
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
5.625
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
5.625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:18:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45/8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.234908
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
5.625
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
5.625
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
5.625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:21:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8+x

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.14043
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 8, in <module>
    total = 45*8+x
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:26:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("10 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.212679
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:26:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("10 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:26:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("10 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.193336
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:26:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("10 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:27:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.179772
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:27:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:29:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.19732
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.210774
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.136587
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.15818
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.125562
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.180013
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.181748
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.241898
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.179248
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.156626
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.131023
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
716.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.29522
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
361.23
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
361.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.158834
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
716.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.173453
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
716.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
124347.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
361.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.27525
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
361.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.505915
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
124347.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
361.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.555539
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
716.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
124347.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.389038
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
716.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
716.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.357001
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
716.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
124347.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.628199
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
qual o valor do jogo?  124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.498153
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
124347.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
qual o valor do jogo?  716.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.405157
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/2894/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.535134
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
qual o valor do jogo?  124347.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
qual o valor do jogo?  124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.155633
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
716.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
361.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+(45*8)

# Impressao do valor total:
print(total)
-- OUTPUT:
361.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+(45*8)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.13281
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
716.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+(45*8)

# Impressao do valor total:
print(total)
-- OUTPUT:
361.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:41:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.192239
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:41:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor do jogo?  "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.165656
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
